--- a/index.html
+++ b/index.html
@@ -18,24 +18,100 @@
 </head>
 
 <body>
-  <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.8.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <header>
+    <div class="content-wrapper">
+      <div class="logo">EJ</div>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#my-work">My Work</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+  </header>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <main>
+    <section class="hero">
+      <div class="content-wrapper">
+        <h3>Hi!</h3>
+        <h1>I'm Emery</h1>
+        <h2>Front End Developer</h2>
+        <p>I'm a Chicago based graphic designer turned front end web developer that loves expressing my creativity through code.</p>
+        <a href="#" class="gradient-button">Hire Me</a>
+      </div>
+    </section>
+
+    <section class="my-work">
+      <div class="content-wrapper">
+        <h1>My Portfolio</h1>
+          <article>
+            <img src="#" alt="Accelerate Project" />
+            <h2>Accelerate</h2>
+            <h3>Languages</h3>
+          </article>
+          <article>
+            <img src="#" alt="Unplugged Retreat" />
+            <h2>Unplugged Retreat</h2>
+            <h3>Languages</h3>
+          </article>
+          <article>
+            <img src="#" alt="Easy Bank" />
+            <h2>Easy Bank</h2>
+            <h3>Languages</h3>
+          </article>
+          <article>
+            <img src="#" alt="Fylo" />
+            <h2>Fylo</h2>
+            <h3>Languages</h3>
+          </article>
+      </div>
+    </section>
+
+    <section class="services">
+      <div class="content-wrapper">
+        <h1>Services</h1>
+        <article>
+          <img src="#" alt="#" />
+          <h2>A creative touch</h2>
+          <p>Due to my background in art and design, I can give your website that creative touch that will make it stand out from the rest! Whether you want something colorful and quirky, clean and modern, or somewhere in between, I know how to bring your vision to life and make it uniquely you.</p>
+        </article>
+        <article>
+          <img src="#" alt="#" />
+          <h2>Responsive design</h2>
+          <p>In today’s day and age, you never know where your customers are viewing your website! Whether they’re visiting from their iPhone, tablet, desktop, or something in between, I’ll ensure that your website looks (and functions) beautifully no matter what device it’s being viewed on.</p>
+        </article>
+        <article>
+          <img src="#" alt="#" />
+          <h2>E-Commerce for everyone</h2>
+          <p>Whether you want to start selling products on your existing website, or need a shop refresh, I’ve got your needs covered! I have experience with website builders such as Squarespace, as well as integration with platforms like Woocommerce on WordPress. We can work together to make sure your shopping cart is always full!</p>
+        </article>
+        <article>
+          <img src="#" alt="#" />
+          <h2>WordPress Customization & Integration</h2>
+          <p>	I can provide WordPress services that allow you to really utilize all that the platform has to offer. If you’re transferring over from another blogging platform, you can still keep your data while upgrading to a better look and easier platform!</p>
+        </article>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <h1>Have a project?</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor.</p>
+      <a href="#" class="solid-button">Hire Me</a>
+
+      <div class="logo">EJ</div>
+        <div class="social-media">
+          <a href="#">Facebook</a>
+          <a href="#">Twitter</a>
+          <a href="#">Instagram</a>
+        </div>
+    </div>
+  </footer>
+
+
 </body>
-
 </html>
