Added basic CSS formatting for the layout

--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Studio Emery | Web Development</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -34,7 +32,7 @@
   </header>
 
   <main>
-    <section class="hero">
+    <section id="hero">
       <div class="content-wrapper">
         <h3>Hi!</h3>
         <h1>I'm Emery</h1>
@@ -44,55 +42,72 @@
       </div>
     </section>
 
-    <section class="my-work">
+    <section id="my-work">
       <div class="content-wrapper">
         <h1>My Portfolio</h1>
-          <article>
-            <img src="#" alt="Accelerate Project" />
-            <h2>Accelerate</h2>
-            <h3>Languages</h3>
-          </article>
-          <article>
-            <img src="#" alt="Unplugged Retreat" />
-            <h2>Unplugged Retreat</h2>
-            <h3>Languages</h3>
-          </article>
-          <article>
-            <img src="#" alt="Easy Bank" />
-            <h2>Easy Bank</h2>
-            <h3>Languages</h3>
-          </article>
-          <article>
-            <img src="#" alt="Fylo" />
-            <h2>Fylo</h2>
-            <h3>Languages</h3>
-          </article>
+          <div class="work-container">
+            <article>
+              Accelerate Image
+            </article>
+            <article>
+              <h2>Accelerate</h2>
+              <h3>Languages</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
+            </article>
+            <article>
+              Unplugged Image
+            </article>
+            <article>
+              <h2>Unplugged Retreat</h2>
+              <h3>Languages</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
+            </article>
+            <article>
+              Easy Bank Image
+            </article>
+            <article>
+              <h2>Easy Bank</h2>
+              <h3>Languages</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
+            </article>
+            <article>
+              Fylo Image
+            </article>
+            <article>
+              <h2>Fylo</h2>
+              <h3>Languages</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
+            </article>
+        </div>
       </div>
     </section>
 
-    <section class="services">
+
+    <section id="services">
       <div class="content-wrapper">
         <h1>Services</h1>
-        <article>
-          <img src="#" alt="#" />
-          <h2>A creative touch</h2>
-          <p>Due to my background in art and design, I can give your website that creative touch that will make it stand out from the rest! Whether you want something colorful and quirky, clean and modern, or somewhere in between, I know how to bring your vision to life and make it uniquely you.</p>
-        </article>
-        <article>
-          <img src="#" alt="#" />
-          <h2>Responsive design</h2>
-          <p>In today’s day and age, you never know where your customers are viewing your website! Whether they’re visiting from their iPhone, tablet, desktop, or something in between, I’ll ensure that your website looks (and functions) beautifully no matter what device it’s being viewed on.</p>
-        </article>
-        <article>
-          <img src="#" alt="#" />
-          <h2>E-Commerce for everyone</h2>
-          <p>Whether you want to start selling products on your existing website, or need a shop refresh, I’ve got your needs covered! I have experience with website builders such as Squarespace, as well as integration with platforms like Woocommerce on WordPress. We can work together to make sure your shopping cart is always full!</p>
-        </article>
-        <article>
-          <img src="#" alt="#" />
-          <h2>WordPress Customization & Integration</h2>
-          <p>	I can provide WordPress services that allow you to really utilize all that the platform has to offer. If you’re transferring over from another blogging platform, you can still keep your data while upgrading to a better look and easier platform!</p>
-        </article>
+          <div class="services-content">
+            <article>
+              <img src="#" alt="#" />
+              <h2>A creative touch</h2>
+              <p>Due to my background in art and design, I can give your website that creative touch that will make it stand out from the rest! Whether you want something colorful and quirky, clean and modern, or somewhere in between, I know how to bring your vision to life and make it uniquely you.</p>
+            </article>
+            <article>
+              <img src="#" alt="#" />
+              <h2>Responsive design</h2>
+              <p>In today’s day and age, you never know where your customers are viewing your website! Whether they’re visiting from their iPhone, tablet, desktop, or something in between, I’ll ensure that your website looks (and functions) beautifully no matter what device it’s being viewed on.</p>
+            </article>
+            <article>
+              <img src="#" alt="#" />
+              <h2>E-Commerce for everyone</h2>
+              <p>Whether you want to start selling products on your existing website, or need a shop refresh, I’ve got your needs covered! I have experience with website builders such as Squarespace, as well as integration with platforms like Woocommerce on WordPress. We can work together to make sure your shopping cart is always full!</p>
+            </article>
+            <article>
+              <img src="#" alt="#" />
+              <h2>WordPress Customization & Integration</h2>
+              <p>	I can provide WordPress services that allow you to really utilize all that the platform has to offer. If you’re transferring over from another blogging platform, you can still keep your data while upgrading to a better look and easier platform!</p>
+            </article>
+        </div>
       </div>
     </section>
   </main>
@@ -102,8 +117,6 @@
       <h1>Have a project?</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor.</p>
       <a href="#" class="solid-button">Hire Me</a>
-
-      <div class="logo">EJ</div>
         <div class="social-media">
           <a href="#">Facebook</a>
           <a href="#">Twitter</a>
