Added desktop styles/adjusted mobile styles

--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
 <body>
 
   <header>
     <div class="content-wrapper">
-      <div class="logo">EJ</div>
+      <div class="logo"><i class="fas fa-code fa-2x"></i></div>
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
@@ -29,6 +28,7 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
+    </div>
   </header>
 
   <main>
@@ -53,6 +53,7 @@
               <h2>Accelerate</h2>
               <h3>Languages</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
+              <p><a href="#">Repo</a> || <a href="#">View Live</a></p>
             </article>
             <article>
               Unplugged Image
@@ -61,6 +62,7 @@
               <h2>Unplugged Retreat</h2>
               <h3>Languages</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
+              <p><a href="#">Repo</a> || <a href="#">View Live</a></p>
             </article>
             <article>
               Easy Bank Image
@@ -69,6 +71,7 @@
               <h2>Easy Bank</h2>
               <h3>Languages</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
+              <p><a href="#">Repo</a> || <a href="#">View Live</a></p>
             </article>
             <article>
               Fylo Image
@@ -77,6 +80,7 @@
               <h2>Fylo</h2>
               <h3>Languages</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
+              <p><a href="#">Repo</a> || <a href="#">View Live</a></p>
             </article>
         </div>
       </div>
