Added styles to navigation & hero

--- a/index.html
+++ b/index.html
@@ -12,21 +12,24 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,800|Open+Sans:400,600,700|&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <header>
     <div class="content-wrapper">
-      <div class="logo"><i class="fas fa-code fa-2x"></i></div>
+      <div class="logo">
+        <a href="#"><i class="fas fa-code fa-2x"></i></a>
+      </div>
       <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#my-work">My Work</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#my-work">My Work</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
       </nav>
     </div>
   </header>
@@ -35,10 +38,10 @@
     <section id="hero">
       <div class="content-wrapper">
         <h3>Hi!</h3>
-        <h1>I'm Emery</h1>
-        <h2>Front End Developer</h2>
+        <h1>I'm <span>Emery</span> Jordan</h1>
+        <h2><span>Front End</span> Developer</h2>
         <p>I'm a Chicago based graphic designer turned front end web developer that loves expressing my creativity through code.</p>
-        <a href="#" class="gradient-button">Hire Me</a>
+        <p class="button-container"><a href="#services" class="gradient-button">Hire Me</a></p>
       </div>
     </section>
 
