--- a/index.html
+++ b/index.html
@@ -41,49 +41,43 @@
         <h1>I'm <span>Emery</span> Jordan</h1>
         <h2><span>Front End</span> Developer</h2>
         <p>I'm a Chicago based graphic designer turned front end web developer that loves expressing my creativity through code.</p>
-        <p class="button-container"><a href="#services" class="gradient-button">Hire Me</a></p>
+        <p class="button-container"><a href="#services" class="white-button">Hire Me</a></p>
       </div>
     </section>
 
     <section id="my-work">
       <div class="content-wrapper">
-        <h1>My Portfolio</h1>
+        <h1>My <span>Portfolio</span></h1>
           <div class="work-container">
             <article>
-              Accelerate Image
+              <img src="./img/accelerate.png" alt="Accelerate Marketing Website Screenshot" />
             </article>
             <article>
               <h2>Accelerate</h2>
-              <h3>Languages</h3>
+              <h3>WordPress, HTML5, CSS3, PHP</h3>
+              <hr>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
-              <p><a href="#">Repo</a> || <a href="#">View Live</a></p>
+              <p><a href="http://accelerate-marketing.studioemery.com/" target="_blank">View Live</a></p>
             </article>
             <article>
-              Unplugged Image
+              <img src="./img/unplugged.png" alt="Unplugged Retreat Website Screenshot" />
             </article>
             <article>
               <h2>Unplugged Retreat</h2>
-              <h3>Languages</h3>
+              <h3>HTML5, CSS3, Git</h3>
+              <hr>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
-              <p><a href="#">Repo</a> || <a href="#">View Live</a></p>
+              <p><a href="https://github.com/emmy-html/unplugged-retreat" target="_blank">Repo</a> || <a href="https://emmy-html.github.io/unplugged-retreat" target="_blank">View Live</a></p>
             </article>
             <article>
-              Easy Bank Image
+              <img src="./img/easy-bank.png" alt="Easy Bank Website Screenshot" />
             </article>
             <article>
               <h2>Easy Bank</h2>
-              <h3>Languages</h3>
+              <h3>HTML5, CSS3, JavaScript, Git</h3>
+              <hr>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
-              <p><a href="#">Repo</a> || <a href="#">View Live</a></p>
-            </article>
-            <article>
-              Fylo Image
-            </article>
-            <article>
-              <h2>Fylo</h2>
-              <h3>Languages</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
-              <p><a href="#">Repo</a> || <a href="#">View Live</a></p>
+              <p><a href="https://github.com/emmy-html/easy-bank" target="_blank">Repo</a> || <a href="https://emmy-html.github.io/easy-bank" target="_blank">View Live</a></p>
             </article>
         </div>
       </div>
@@ -95,23 +89,23 @@
         <h1>Services</h1>
           <div class="services-content">
             <article>
-              <img src="#" alt="#" />
-              <h2>A creative touch</h2>
+              <i class="fas fa-swatchbook fa-5x"></i>
+              <h2>A <span>creative</span> touch</h2>
               <p>Due to my background in art and design, I can give your website that creative touch that will make it stand out from the rest! Whether you want something colorful and quirky, clean and modern, or somewhere in between, I know how to bring your vision to life and make it uniquely you.</p>
             </article>
             <article>
-              <img src="#" alt="#" />
-              <h2>Responsive design</h2>
+              <i class="fas fa-mobile-alt fa-5x"></i>
+              <h2><span>Responsive</span> design</h2>
               <p>In today’s day and age, you never know where your customers are viewing your website! Whether they’re visiting from their iPhone, tablet, desktop, or something in between, I’ll ensure that your website looks (and functions) beautifully no matter what device it’s being viewed on.</p>
             </article>
             <article>
-              <img src="#" alt="#" />
-              <h2>E-Commerce for everyone</h2>
+              <i class="fas fa-shopping-cart fa-5x"></i>
+              <h2><span>E-Commerce</span> for everyone</h2>
               <p>Whether you want to start selling products on your existing website, or need a shop refresh, I’ve got your needs covered! I have experience with website builders such as Squarespace, as well as integration with platforms like Woocommerce on WordPress. We can work together to make sure your shopping cart is always full!</p>
             </article>
             <article>
-              <img src="#" alt="#" />
-              <h2>WordPress Customization & Integration</h2>
+              <i class="fab fa-wordpress fa-5x"></i>
+              <h2>WordPress <span>Customization</span></h2>
               <p>	I can provide WordPress services that allow you to really utilize all that the platform has to offer. If you’re transferring over from another blogging platform, you can still keep your data while upgrading to a better look and easier platform!</p>
             </article>
         </div>
