--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section id="my-work">
       <div class="content-wrapper">
-        <h1>My <span>Portfolio</span></h1>
+        <h1>My <span>Work</span></h1>
           <div class="work-container">
             <article>
               <img src="./img/accelerate.png" alt="Accelerate Marketing Website Screenshot" />
@@ -115,13 +115,13 @@
 
   <footer>
     <div class="content-wrapper">
-      <h1>Have a project?</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor.</p>
-      <a href="#" class="solid-button">Hire Me</a>
+      <h1>Have a <span>project?</span></h1>
+      <p>Do you have a website that needs a fresh look, updating, or do you just need a fresh start for your business' website? Let's chat about it!</p>
+      <p class="button-container"><a href="#" class="pink-button">Hire Me</a></p>
         <div class="social-media">
-          <a href="#">Facebook</a>
-          <a href="#">Twitter</a>
-          <a href="#">Instagram</a>
+          <a href="https://github.com/emmy-html"><i class="fab fa-github-square fa-2x"></i></a>
+          <a href="https://twitter.com/emmydoesit"><i class="fab fa-twitter-square fa-2x"></i></a>
+          <a href="https://www.linkedin.com/in/emmyjordan16/"><i class="fab fa-linkedin fa-2x"></i></a>
         </div>
     </div>
   </footer>
