Added tablet styles

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <article>
               <i class="fas fa-shopping-cart fa-5x"></i>
               <h2><span>E-Commerce</span> for everyone</h2>
-              <p>Whether you want to start selling products on your existing website, or need a shop refresh, I’ve got your needs covered! I have experience with website builders such as Squarespace, as well as integration with platforms like Woocommerce on WordPress. We can work together to make sure your shopping cart is always full!</p>
+              <p>Whether you want to start selling products on your existing website, or need a shop refresh, I’ve got your needs covered! I have experience with website builders such as Squarespace, as well as integration with plugins such as Woocommerce. We can work together to make sure your shopping cart is always full!</p>
             </article>
             <article>
               <i class="fab fa-wordpress fa-5x"></i>
