--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav>
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="./about/index.html">About</a></li>
             <li><a href="#my-work">My Work</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#">Contact</a></li>
