Added service page with styles for mobile & dekstop

--- a/services/index.html
+++ b/services/index.html
@@ -27,7 +27,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="./about/index.html">About</a></li>
             <li><a href="#my-work">My Work</a></li>
-            <li><a href="../services/index.html">Services</a></li>
+            <li><a href="./services/index.html">Services</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
       </nav>
@@ -35,38 +35,29 @@
   </header>
 
   <main>
-    <section id="about">
+    <section id="services-page">
       <div class="content-wrapper">
-        <h1>about <span>emery</span> jordan</h1>
-          <div class="about-container">
+        <h1>My <span>Services</span></h1>
+          <div class="services-page-content">
             <article>
-              <p>When I'm not coding, I’m passionate about everything from cooking to catching up on my Netflix queue! My background in art and design allows me to see the beauty in just about anything - including technology. After graduating with my A.A.S in Digital Art & Design in May 2019, I decided to take my creative skills to the next level by becoming a front-end web developer.</p>
+              <i class="fas fa-swatchbook fa-5x"></i>
+              <h2>A <span>creative</span> touch</h2>
+              <p>Due to my background in art and design, I can give your website that creative touch that will make it stand out from the rest! Whether you want something colorful and quirky, clean and modern, or somewhere in between, I know how to bring your vision to life and make it uniquely you.</p>
             </article>
             <article>
-              <p>I am interested in coding responsive designs for customer-focused services such as entertainment apps & venues, restaurants, and online retail. I would especially love to work on projects that focus on <b>diversity & inclusion</b> of minority & <b>LGBTQIA+</b> individuals in the media and service industries.</p>
+              <i class="fas fa-mobile-alt fa-5x"></i>
+              <h2><span>Responsive</span> design</h2>
+              <p>In today’s day and age, you never know where your customers are viewing your website! Whether they’re visiting from their iPhone, tablet, desktop, or something in between, I’ll ensure that your website looks (and functions) beautifully no matter what device it’s being viewed on.</p>
             </article>
             <article>
-              <h2>My skills</h2>
-              <hr>
-                <ul>
-                  <li>HTML5</li>
-                  <div class="html"></div>
-                  <li>CSS3</li>
-                  <div class="css"></div>
-                  <li>Git</li>
-                  <div class="git"></div>
-                  <li>SASS</li>
-                  <div class="sass"></div>
-                  <li>WordPress</li>
-                  <div class="wordpress"></div>
-                  <li>Adobe Photoshop</li>
-                  <div class="photoshop"></div>
-                  <li>Adobe Illustrator</li>
-                  <div class="illustrator"></div>
-                </ul>
+              <i class="fas fa-shopping-cart fa-5x"></i>
+              <h2><span>E-Commerce</span> for everyone</h2>
+              <p>Whether you want to start selling products on your existing website, or need a shop refresh, I’ve got your needs covered! I have experience with website builders such as Squarespace, as well as integration with plugins such as Woocommerce. We can work together to make sure your shopping cart is always full!</p>
             </article>
             <article>
-              <img src="../img/portrait.png" alt="Portrait" />
+              <i class="fab fa-wordpress fa-5x"></i>
+              <h2>WordPress <span>Customization</span></h2>
+              <p>	I can provide WordPress services that allow you to really utilize all that the platform has to offer. If you’re transferring over from another blogging platform, you can still keep your data while upgrading to a better look and easier platform!</p>
             </article>
         </div>
       </div>
