--- a/services/index.html
+++ b/services/index.html
@@ -24,10 +24,10 @@
       </div>
       <nav>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="./about/index.html">About</a></li>
-            <li><a href="#my-work">My Work</a></li>
-            <li><a href="./services/index.html">Services</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about/index.html">About</a></li>
+            <li><a href="../my-work/index.html">My Work</a></li>
+            <li><a href="../services/index.html">Services</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
       </nav>
