Updated contact information

--- a/my-work/index.html
+++ b/my-work/index.html
@@ -79,7 +79,7 @@
     <div class="content-wrapper">
       <h1>Have a <span>project?</span></h1>
       <p>Do you have a website that needs a fresh look, updating, or do you just need a fresh start for your business' website? Let's chat about it!</p>
-      <p class="button-container"><a href="#" class="pink-button">Hire Me</a></p>
+      <p class="button-container"><a href="mailto:hello@studioemery.com" class="pink-button">Hire Me</a></p>
         <div class="social-media">
           <a href="https://github.com/emmy-html"><i class="fab fa-github-square fa-2x"></i></a>
           <a href="https://twitter.com/emmydoesit"><i class="fab fa-twitter-square fa-2x"></i></a>
