--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
       </div>
       <nav>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="./about/index.html">About</a></li>
             <li><a href="#my-work">My Work</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#">Contact</a></li>
           </ul>
       </nav>
     </div>
@@ -41,7 +40,7 @@
         <h1>I'm <span>Emery</span> Jordan</h1>
         <h2><span>Front End</span> Developer</h2>
         <p>I'm a Chicago based graphic designer turned front end web developer that loves expressing my creativity through code.</p>
-        <p class="button-container"><a href="#services" class="white-button">Hire Me</a></p>
+        <p class="button-container"><a href="mailto:hello@studioemery.com" class="white-button">Hire Me</a></p>
       </div>
     </section>
 
@@ -117,7 +116,7 @@
     <div class="content-wrapper">
       <h1>Have a <span>project?</span></h1>
       <p>Do you have a website that needs a fresh look, updating, or do you just need a fresh start for your business' website? Let's chat about it!</p>
-      <p class="button-container"><a href="#" class="pink-button">Hire Me</a></p>
+      <p class="button-container"><a href="mailto:hello@studioemery.com" class="pink-button">Hire Me</a></p>
         <div class="social-media">
           <a href="https://github.com/emmy-html"><i class="fab fa-github-square fa-2x"></i></a>
           <a href="https://twitter.com/emmydoesit"><i class="fab fa-twitter-square fa-2x"></i></a>
