Updated portfolio info

--- a/about/index.html
+++ b/about/index.html
@@ -52,16 +52,16 @@
                   <div class="html"></div>
                   <li>CSS3</li>
                   <div class="css"></div>
-                  <li>Git</li>
-                  <div class="git"></div>
                   <li>SASS</li>
                   <div class="sass"></div>
+                  <li>JavaScript</li>
+                  <div class="javascript"></div>
+                  <li>Git</li>
+                  <div class="git"></div>
                   <li>WordPress</li>
                   <div class="wordpress"></div>
                   <li>Adobe Photoshop</li>
                   <div class="photoshop"></div>
-                  <li>Adobe Illustrator</li>
-                  <div class="illustrator"></div>
                 </ul>
             </article>
             <article>
