--- a/my-work/index.html
+++ b/my-work/index.html
@@ -64,7 +64,7 @@
             </article>
             <article>
               <h2>Easy Bank</h2>
-              <h3>HTML5, CSS3, JavaScript, Git</h3>
+              <h3>HTML5, CSS3, SASS, JavaScript, Git</h3>
               <hr>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
               <p><a href="https://github.com/emmy-html/easy-bank" target="_blank">Repo</a> || <a href="https://emmy-html.github.io/easy-bank" target="_blank">View Live</a></p>
