Updated bio on About page

--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,7 @@
         <h1>about <span>emery</span> jordan</h1>
           <div class="about-container">
             <article>
-              <p>When I'm not coding, I’m passionate about everything from cooking to catching up on my Netflix queue! My background in art and design allows me to see the beauty in just about anything - including technology. After graduating with my A.A.S in Digital Art & Design in May 2019, I decided to take my creative skills to the next level by becoming a front-end web developer.</p>
+              <p>I’m a front end developer with a designer’s eye. My background in art and design allows me to see the beauty in just about anything - including technology! In college, I took an intro to web development class and got bit by the CSS bug!  After graduating with my Associates of Applied Sciences in Digital Art & Design, I decided to take my creative skills to the next level by becoming a front-end web developer. I take pride in my eye for cohesive color schemes and clean designs for any project that comes my way. When I’m not coding, I love cooking, queer media and playing Stardew Valley.</p>
             </article>
             <article>
               <p>I am interested in coding responsive designs for customer-focused services such as entertainment apps & venues, restaurants, and online retail. I would especially love to work on projects that focus on <b>diversity & inclusion</b> of minority & <b>LGBTQIA+</b> individuals in the media and service industries.</p>
