Added links to case study page to Accelerate screenshots

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1>My <span>Work</span></h1>
           <div class="work-container">
             <article>
-              <img src="./img/accelerate.png" alt="Accelerate Marketing Website Screenshot" />
+              <a href="./my-work/accelerate.html"><img src="./img/accelerate.png" alt="Accelerate Marketing Website Screenshot" /></a>
             </article>
             <article>
               <h2>Accelerate</h2>
