--- a/my-work/index.html
+++ b/my-work/index.html
@@ -40,7 +40,7 @@
         <h1>My <span>Work</span></h1>
           <div class="work-page-container">
             <article>
-              <img src="../img/accelerate.png" alt="Accelerate Marketing Website Screenshot" />
+              <a href="./accelerate.html"><img src="../img/accelerate.png" alt="Accelerate Marketing Website Screenshot" /></a>
             </article>
             <article>
               <h2>Accelerate</h2>
