Removed paragraph place holder from index.html

--- a/my-work/accelerate.html
+++ b/my-work/accelerate.html
@@ -37,7 +37,7 @@
 
     <section id="case-study-page">
       <div class="content-wrapper">
-        <h1>Case <span>Study</span></h1>
+        <h1>Accelerate <span>Marketing</span></h1>
           <div class="case-study-container">
             <article>
               <img src="../img/accelerate.png" alt="Accelerate Marketing Website Screenshot" />
@@ -45,7 +45,7 @@
               <img src="../img/accelerate-screenshot-2.png" alt="Accelerate Marketing Website Screenshot" />
             </article>
             <article>
-              <h2>Accelerate Marketing</h2>
+              <h2>Case Study</h2>
               <h3>WordPress, HTML5, CSS3, PHP</h3>
               <hr>
               <p>For this project, I was assigned the task of coding a WordPress theme based on web designs that were provided to me for Accelerate Marketing. This was a self initiated project courtesy of Skillcrush, where they provided source material that closely mirrored the experience of working directly with a client. This included daily emails and a professional web development workflow that consisted of week long sprints before deploying changes. Because this was an existing company that previously used Blogger as their platform, maintaining the data from their original website was key. After importing their original data, I began working on their custom theme. When making their theme, I made a parent theme that had the basic structure of their layout. I then utilized a child theme to add special features such as custom post types, which allow the client to create additional posts as needed while maintaining the look and feel of the original design.</p>
