--- a/my-work/index.html
+++ b/my-work/index.html
@@ -46,8 +46,8 @@
               <h2>Accelerate</h2>
               <h3>WordPress, HTML5, CSS3, PHP</h3>
               <hr>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
-              <p><a href="http://accelerate-marketing.studioemery.com/" target="_blank">View Live</a></p>
+              <p>For this project, I was assigned the task of coding a WordPress theme based on web designs that were provided to me for Accelerate Marketing. This was a self initiated project courtesy of Skillcrush, where they provided source material that closely mirrored the experience of working directly with a client.</p>
+              <p><a href="http://emmy-html.github.io/portfolio/my-work/accelerate.html" target="_blank">Repo</a> | <a href="http://accelerate-marketing.studioemery.com/" target="_blank">View Live</a></p>
             </article>
             <article>
               <img src="../img/unplugged.png" alt="Unplugged Retreat Website Screenshot" />
@@ -57,7 +57,7 @@
               <h3>HTML5, CSS3, Git</h3>
               <hr>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
-              <p><a href="https://github.com/emmy-html/unplugged-retreat" target="_blank">Repo</a> || <a href="https://emmy-html.github.io/unplugged-retreat" target="_blank">View Live</a></p>
+              <p><a href="https://github.com/emmy-html/unplugged-retreat" target="_blank">Repo</a> | <a href="https://emmy-html.github.io/unplugged-retreat" target="_blank">View Live</a></p>
             </article>
             <article>
               <img src="../img/easy-bank.png" alt="Easy Bank Website Screenshot" />
@@ -67,7 +67,7 @@
               <h3>HTML5, CSS3, SASS, JavaScript, Git</h3>
               <hr>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec pulvinar est. Ut posuere turpis ac fringilla auctor. Donec ultrices vulputate mauris, id molestie metus lobortis non. In rutrum vitae massa at vulputate. Aliquam ut posuere enim. Suspendisse elementum quam nec pellentesque porttitor.</p>
-              <p><a href="https://github.com/emmy-html/easy-bank" target="_blank">Repo</a> || <a href="https://emmy-html.github.io/easy-bank" target="_blank">View Live</a></p>
+              <p><a href="https://github.com/emmy-html/easy-bank" target="_blank">Repo</a> | <a href="https://emmy-html.github.io/easy-bank" target="_blank">View Live</a></p>
             </article>
         </div>
       </div>
