Updated portfolio descriptions, about page, and navigation settings

--- a/about/index.html
+++ b/about/index.html
@@ -20,14 +20,14 @@
   <header>
     <div class="content-wrapper">
       <div class="logo">
-        <a href="#"><i class="fas fa-code fa-2x"></i></a>
+        <a href="../index.html"><i class="fas fa-code fa-2x"></i></a>
       </div>
       <nav>
           <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="../about/index.html">About</a></li>
-            <li><a href="../my-work/index.html">My Work</a></li>
-            <li><a href="../services/index.html">Services</a></li>
+            <li><a href="../index.html#my-work">My Work</a></li>
+            <li><a href="../index.html#services">Services</a></li>
           </ul>
       </nav>
     </div>
@@ -39,7 +39,7 @@
         <h1>about <span>emery</span> jordan</h1>
           <div class="about-container">
             <article>
-              <p>I’m a front end developer with a designer’s eye. My background in art and design allows me to see the beauty in just about anything - including all things technology. In college, I took an intro to web development class and got bit by the CSS bug! After graduating with my Associates of Applied Sciences in Digital Art & Design, I decided to take my creative skills to the next level by becoming a front-end web developer. I take pride in my eye for cohesive color schemes and clean designs for any project that comes my way. When I’m not coding, I love cooking, queer media and trying not to die in the Stardew Valley mines.</p>
+              <p>I’m a front end developer with a designer’s eye. My background in art and design allows me to see the beauty in just about anything - including all things technology. In college, I took an intro to web development class and got bit by the CSS bug! After graduating with my Associates of Applied Sciences in Digital Art & Design, I decided to take my creative skills to the next level by becoming a front-end web developer. I take pride in my eye for cohesive color schemes and clean designs for any project that comes my way. When I’m not coding, I love cooking, queer media and trying not to die in the mines of Stardew Valley.</p>
             </article>
             <article>
               <p>I am interested in coding responsive designs for customer-focused services such as entertainment apps & venues, restaurants, and online retail. I would especially love to work on projects that focus on <b>diversity & inclusion</b> of minority & <b>LGBTQIA+</b> individuals in the media and service industries. As a marginalized individual, I understand the needs of under represented groups, and my goal is to help provide a voice for those people.</p>
@@ -48,20 +48,20 @@
               <h2>My skills</h2>
               <hr>
                 <ul>
-                  <li>HTML5</li>
-                  <div class="html"></div>
                   <li>CSS3</li>
                   <div class="css"></div>
-                  <li>SASS</li>
-                  <div class="sass"></div>
-                  <li>JavaScript</li>
-                  <div class="javascript"></div>
                   <li>Git</li>
                   <div class="git"></div>
+                  <li>HTML5</li>
+                  <div class="html"></div>
+                  <li>JavaScript</li>
+                  <div class="javascript"></div>
+                  <li>jQuery</li>
+                  <div class="jQuery"></div>
+                  <li>SASS</li>
+                  <div class="sass"></div>
                   <li>WordPress</li>
                   <div class="wordpress"></div>
-                  <li>Adobe Photoshop</li>
-                  <div class="photoshop"></div>
                 </ul>
             </article>
             <article>
@@ -75,7 +75,7 @@
   <footer>
     <div class="content-wrapper">
       <h1>Have a <span>project?</span></h1>
-      <p>Do you have a website that needs a fresh look, updating, or do you just need a fresh start for your business' website? Let's chat about it!</p>
+      <p>Do you have a website that needs a fresh look, updating, or do you just need a fresh start for your business' website? Or do you think I'd make a great addition to your development team? I'd love to chat about it!</p>
       <p class="button-container"><a href="mailto:hello@studioemery.com" class="pink-button">Hire Me</a></p>
         <div class="social-media">
           <a href="https://github.com/emmy-html"><i class="fab fa-github-square fa-2x"></i></a>
