--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <div class="content-wrapper">
       <div class="logo">
-        <a href="#"><i class="fas fa-code fa-2x"></i></a>
+        <a href="index.html"><i class="fas fa-code fa-2x"></i></a>
       </div>
       <nav>
           <ul>
@@ -49,31 +49,34 @@
         <h1>My <span>Work</span></h1>
           <div class="work-container">
             <article>
-              <a href="./my-work/accelerate.html"><img src="./img/accelerate.png" alt="Accelerate Marketing Website Screenshot" /></a>
+              <a href="http://accelerate-marketing.studioemery.com/" target="_blank"><img src="./img/accelerate.png" alt="Accelerate Marketing Website Screenshot" /></a>
             </article>
             <article>
               <h2>Accelerate</h2>
               <h3>WordPress, HTML5, CSS3, PHP</h3>
               <hr>
-              <p><a href="http://github.com/emmy-html/accelerate-theme" target="_blank">Repo</a> | <a href="http://accelerate-marketing.studioemery.com/" target="_blank">View Live</a></p>
+              <p>This project was focused on building a responsive WordPress theme for a marketing company. I loved the process of taking their pre-existing blog, including all of its' content and media, and turning it into a WordPress theme. This project features lots of customization features that allow the client to update the website as needed by utilizing plugins and custom post types.</p>
+              <p><a href="http://github.com/emmy-html/accelerate-theme" target="_blank">View Repository</a></p>
             </article>
             <article>
-              <img src="./img/unplugged.png" alt="Unplugged Retreat Website Screenshot" />
+              <a href="https://emmy-html.github.io/unplugged-retreat/" target="_blank"><img src="./img/unplugged.png" alt="Unplugged Retreat Website Screenshot" /></a>
             </article>
             <article>
               <h2>Unplugged Retreat</h2>
               <h3>HTML5, CSS3, Git</h3>
               <hr>
-              <p><a href="https://github.com/emmy-html/unplugged-retreat" target="_blank">Repo</a> | <a href="https://emmy-html.github.io/unplugged-retreat" target="_blank">View Live</a></p>
+              <p>For this project, I was faced with the task of creating a 3 page website for a retreat for tech teams in need of a team building break. It gave me a deeper understanding of how to link multiple pages to one website, as well as having CSS that can easily be reused and/or lightly modified among different website pages. I enjoyed working with flexbox features to create responsive layouts during this project.</p>
+              <p><a href="https://github.com/emmy-html/unplugged-retreat" target="_blank">View Repository</a></p>
             </article>
             <article>
-              <img src="./img/easy-bank.png" alt="Easy Bank Website Screenshot" />
+              <a href="https://emmy-html.github.io/lolcat-clock/" target="_blank"><img src="./img/lolcat.png" alt="LOLCAT Screenshot" /></a>
             </article>
             <article>
-              <h2>Easy Bank</h2>
-              <h3>HTML5, CSS3, SASS, JavaScript, Git</h3>
+              <h2>LOLCAT Clock</h2>
+              <h3>HTML5, CSS3, JavaScript, Git</h3>
               <hr>
-              <p><a href="https://github.com/emmy-html/easy-bank" target="_blank">Repo</a> | <a href="https://emmy-html.github.io/easy-bank" target="_blank">View Live</a></p>
+              <p>The LOLCAT Clock Project gave me a variety of tasks to translate into JavaScript. I had to create a clock that displayed the time, while also displaying a different message and image depending on the time of day. By breaking these needs down into psuedocode, I was able to write the appropriate JavaScript functions to bring it all together; then finally connect it to the HTML and CSS that was provided to me.</p>
+              <p><a href="https://github.com/emmy-html/lolcat-clock" target="_blank">View Repository</a></p>
             </article>
         </div>
       </div>
@@ -112,7 +115,7 @@
   <footer>
     <div class="content-wrapper">
       <h1>Have a <span>project?</span></h1>
-      <p>Do you have a website that needs a fresh look, updating, or do you just need a fresh start for your business' website? Let's chat about it!</p>
+      <p>Do you have a website that needs a fresh look, updating, or do you just need a fresh start for your business' website? Or do you think I'd make a great addition to your development team? I'd love to chat about it!</p>
       <p class="button-container"><a href="mailto:hello@studioemery.com" class="pink-button">Hire Me</a></p>
         <div class="social-media">
           <a href="https://github.com/emmy-html"><i class="fab fa-github-square fa-2x"></i></a>
