Fixed typos on homepage

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <h2>Accelerate</h2>
               <h3>WordPress, HTML5, CSS3, PHP</h3>
               <hr>
-              <p>This project was focused on building a responsive WordPress theme for a marketing company. I loved the process of taking their pre-existing blog, including all of its' content and media, and turning it into a WordPress theme. This project features lots of customization features that allow the client to update the website as needed by utilizing plugins and custom post types.</p>
+              <p>This project was focused on building a responsive WordPress theme for a marketing company. I loved the process of taking their pre-existing blog, including all of its content and media, and turning it into a WordPress theme. This project features lots of customization features that allow the client to update the website as needed by utilizing plugins and custom post types.</p>
               <p><a href="http://github.com/emmy-html/accelerate-theme" target="_blank">View Repository</a></p>
             </article>
             <article>
@@ -75,7 +75,7 @@
               <h2>LOLCAT Clock</h2>
               <h3>HTML5, CSS3, JavaScript, Git</h3>
               <hr>
-              <p>The LOLCAT Clock Project gave me a variety of tasks to translate into JavaScript. I had to create a clock that displayed the time, while also displaying a different message and image depending on the time of day. By breaking these needs down into psuedocode, I was able to write the appropriate JavaScript functions to bring it all together; then finally connect it to the HTML and CSS that was provided to me.</p>
+              <p>The LOLCAT Clock Project gave me a variety of tasks to translate into JavaScript. I had to create a clock that displayed the time, while also displaying a different message and image depending on the time of day. By breaking these needs down into pseudocode, I was able to write the appropriate JavaScript functions to bring it all together; then finally connect it to the HTML and CSS that was provided to me.</p>
               <p><a href="https://github.com/emmy-html/lolcat-clock" target="_blank">View Repository</a></p>
             </article>
         </div>
@@ -115,7 +115,7 @@
   <footer>
     <div class="content-wrapper">
       <h1>Have a <span>project?</span></h1>
-      <p>Do you have a website that needs a fresh look, updating, or do you just need a fresh start for your business' website? Or do you think I'd make a great addition to your development team? I'd love to chat about it!</p>
+      <p>Do you have a website that needs a fresh look, updating, or do you just need a fresh start for your business's website? Or do you think I'd make a great addition to your development team? I'd love to chat about it!</p>
       <p class="button-container"><a href="mailto:hello@studioemery.com" class="pink-button">Hire Me</a></p>
         <div class="social-media">
           <a href="https://github.com/emmy-html"><i class="fab fa-github-square fa-2x"></i></a>
