Fixed error where new changes were merging with the current code on the master branch

--- a/index.html
+++ b/index.html
@@ -47,10 +47,6 @@
     <section id="my-work">
       <div class="content-wrapper">
         <h1>My <span>Work</span></h1>
-        <!-- Tab links -->
-        <div class="tab">
-          <button class="tablinks" onclick="openCity(event, 'London')">London</button>
-          <button 
           <div class="work-container">
             <article>
               <a href="http://accelerate-marketing.studioemery.com/" target="_blank"><img src="./img/accelerate.png" alt="Accelerate Marketing Website Screenshot" /></a>
@@ -129,6 +125,6 @@
     </div>
   </footer>
 
-
+  <script src="js/main.js"></script>
 </body>
 </html>
